test_files/negative/name/badescape.stats_strict
Not a PDF file
Lexing error at offset 62 [0x3e] : invalid escape sequence in name context !
